--- a/Password Depot/Base.lproj/Main.storyboard
+++ b/Password Depot/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="4ic-A3-KVb">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="4ic-A3-KVb">
                                 <rect key="frame" x="5" y="0.0" width="590" height="556"/>
                                 <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
@@ -50,6 +50,9 @@
                                                             <exclude reference="KqW-xD-R4p"/>
                                                         </mask>
                                                     </variation>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="Id5-Gg-DlD" id="kzf-eU-G5V"/>
+                                                    </connections>
                                                 </textField>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mpQ-bA-DGX">
                                                     <rect key="frame" x="14" y="9" width="30" height="30"/>
@@ -185,18 +188,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="110" sectionHeaderHeight="1" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="lcl-o7-jaZ">
-                                <rect key="frame" x="0.0" y="20" width="600" height="556"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="100" sectionHeaderHeight="1" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="lcl-o7-jaZ">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
                                 <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="password" rowHeight="200" id="p53-4M-HIR" customClass="PasswordListItemCell" customModule="Password_Depot" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="password" rowHeight="100" id="p53-4M-HIR" customClass="PasswordListItemCell" customModule="Password_Depot" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="p53-4M-HIR" id="8jA-rR-RiJ">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sTy-Pz-BYi">
-                                                    <rect key="frame" x="108" y="47" width="111" height="30"/>
+                                                    <rect key="frame" x="108" y="38" width="111" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="bt9-v3-d2C"/>
                                                     </constraints>
@@ -208,7 +211,7 @@
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Password:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZpC-Vf-ouX">
-                                                    <rect key="frame" x="17" y="79" width="81" height="21"/>
+                                                    <rect key="frame" x="17" y="69" width="81" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="81" id="JBB-fH-9e2"/>
                                                         <constraint firstAttribute="height" constant="21" id="OPI-37-TeH"/>
@@ -218,14 +221,14 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sgi-SN-Csw">
-                                                    <rect key="frame" x="17" y="10" width="30" height="30"/>
+                                                    <rect key="frame" x="27" y="13" width="25" height="25"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="BiG-Pl-xMq"/>
-                                                        <constraint firstAttribute="width" constant="30" id="k4g-3j-Tn2"/>
+                                                        <constraint firstAttribute="height" constant="25" id="BiG-Pl-xMq"/>
+                                                        <constraint firstAttribute="width" constant="25" id="k4g-3j-Tn2"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserID:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tEM-U9-ske">
-                                                    <rect key="frame" x="17" y="56" width="81" height="15"/>
+                                                    <rect key="frame" x="17" y="48" width="81" height="15"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -235,11 +238,11 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <state key="normal" title="Link"/>
                                                     <connections>
-                                                        <action selector="onPasswordItemLinkClicked:" destination="Qbn-3P-5M1" eventType="touchUpInside" id="y8E-rZ-Snh"/>
+                                                        <action selector="onOpenLink:" destination="Qbn-3P-5M1" eventType="touchUpInside" id="lkm-8Q-vH4"/>
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1vI-3L-4kP">
-                                                    <rect key="frame" x="108" y="74" width="108" height="30"/>
+                                                    <rect key="frame" x="108" y="65" width="108" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="zur-87-pIE"/>
                                                     </constraints>
@@ -250,8 +253,8 @@
                                                         <action selector="onCopyPasswordClicked:" destination="Qbn-3P-5M1" eventType="touchUpInside" id="dFI-cj-6j3"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Em6-kC-xQq">
-                                                    <rect key="frame" x="108" y="14" width="166" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Em6-kC-xQq">
+                                                    <rect key="frame" x="108" y="14" width="160" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="Tf5-q2-YWq"/>
                                                         <constraint firstAttribute="width" constant="160" id="fmk-e4-JrQ"/>
@@ -269,30 +272,22 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Sgi-SN-Csw" firstAttribute="top" secondItem="8jA-rR-RiJ" secondAttribute="topMargin" constant="2" id="4Eq-tB-CSU"/>
+                                                <constraint firstItem="Sgi-SN-Csw" firstAttribute="top" secondItem="8jA-rR-RiJ" secondAttribute="topMargin" constant="5" id="4Eq-tB-CSU"/>
                                                 <constraint firstItem="sLj-G6-XIl" firstAttribute="trailing" secondItem="8jA-rR-RiJ" secondAttribute="trailingMargin" id="5Qn-xc-z9a"/>
-                                                <constraint firstItem="Em6-kC-xQq" firstAttribute="trailing" secondItem="1vI-3L-4kP" secondAttribute="trailing" id="7Sf-2b-B7K"/>
-                                                <constraint firstItem="tEM-U9-ske" firstAttribute="top" secondItem="Sgi-SN-Csw" secondAttribute="bottom" constant="16" id="H8R-9S-Hgp"/>
-                                                <constraint firstItem="Sgi-SN-Csw" firstAttribute="leading" secondItem="ZpC-Vf-ouX" secondAttribute="leading" id="Ls6-EW-ALa"/>
-                                                <constraint firstItem="Sgi-SN-Csw" firstAttribute="top" secondItem="sLj-G6-XIl" secondAttribute="top" id="NyF-dm-5Zt"/>
-                                                <constraint firstItem="Sgi-SN-Csw" firstAttribute="leading" secondItem="tEM-U9-ske" secondAttribute="leading" id="PPz-fl-P4A"/>
-                                                <constraint firstItem="sTy-Pz-BYi" firstAttribute="top" secondItem="Em6-kC-xQq" secondAttribute="bottom" constant="12" id="W4q-yf-wKx"/>
+                                                <constraint firstItem="tEM-U9-ske" firstAttribute="top" secondItem="Sgi-SN-Csw" secondAttribute="bottom" constant="10" id="H8R-9S-Hgp"/>
+                                                <constraint firstItem="Sgi-SN-Csw" firstAttribute="leading" secondItem="ZpC-Vf-ouX" secondAttribute="leading" constant="10" id="Ls6-EW-ALa"/>
+                                                <constraint firstItem="Sgi-SN-Csw" firstAttribute="top" secondItem="sLj-G6-XIl" secondAttribute="top" constant="3" id="NyF-dm-5Zt"/>
+                                                <constraint firstItem="Sgi-SN-Csw" firstAttribute="leading" secondItem="tEM-U9-ske" secondAttribute="leading" constant="10" id="PPz-fl-P4A"/>
+                                                <constraint firstItem="sTy-Pz-BYi" firstAttribute="top" secondItem="Em6-kC-xQq" secondAttribute="bottom" constant="3" id="W4q-yf-wKx"/>
                                                 <constraint firstItem="Em6-kC-xQq" firstAttribute="firstBaseline" secondItem="sLj-G6-XIl" secondAttribute="baseline" id="WBd-wY-0FG"/>
-                                                <constraint firstItem="Em6-kC-xQq" firstAttribute="trailing" secondItem="sTy-Pz-BYi" secondAttribute="trailing" id="Zam-5l-KCr"/>
-                                                <constraint firstItem="Em6-kC-xQq" firstAttribute="leading" secondItem="Sgi-SN-Csw" secondAttribute="trailing" constant="61" id="e8E-na-2A7"/>
+                                                <constraint firstItem="Em6-kC-xQq" firstAttribute="leading" secondItem="Sgi-SN-Csw" secondAttribute="trailing" constant="56" id="e8E-na-2A7"/>
                                                 <constraint firstItem="1vI-3L-4kP" firstAttribute="leading" secondItem="ZpC-Vf-ouX" secondAttribute="trailing" constant="10" id="hlk-p4-5gV"/>
                                                 <constraint firstItem="ZpC-Vf-ouX" firstAttribute="trailing" secondItem="tEM-U9-ske" secondAttribute="trailing" id="jbe-J1-NCi"/>
-                                                <constraint firstItem="Sgi-SN-Csw" firstAttribute="leading" secondItem="8jA-rR-RiJ" secondAttribute="leadingMargin" constant="9" id="o3O-ZK-8xf"/>
+                                                <constraint firstItem="Sgi-SN-Csw" firstAttribute="leading" secondItem="8jA-rR-RiJ" secondAttribute="leadingMargin" constant="19" id="o3O-ZK-8xf"/>
                                                 <constraint firstItem="ZpC-Vf-ouX" firstAttribute="centerY" secondItem="1vI-3L-4kP" secondAttribute="centerY" id="oum-x9-7Sc"/>
                                                 <constraint firstItem="sTy-Pz-BYi" firstAttribute="leading" secondItem="8jA-rR-RiJ" secondAttribute="leadingMargin" constant="100" id="pwj-l4-MQZ"/>
-                                                <constraint firstItem="ZpC-Vf-ouX" firstAttribute="top" secondItem="tEM-U9-ske" secondAttribute="bottom" constant="8" symbolic="YES" id="q95-ez-lK0"/>
+                                                <constraint firstItem="ZpC-Vf-ouX" firstAttribute="top" secondItem="tEM-U9-ske" secondAttribute="bottom" constant="6" id="q95-ez-lK0"/>
                                             </constraints>
-                                            <variation key="default">
-                                                <mask key="constraints">
-                                                    <exclude reference="7Sf-2b-B7K"/>
-                                                    <exclude reference="Zam-5l-KCr"/>
-                                                </mask>
-                                            </variation>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="itemImage" destination="Sgi-SN-Csw" id="Gvw-ln-AqX"/>
@@ -333,12 +328,12 @@
                             <constraint firstItem="ksK-rE-3vc" firstAttribute="top" secondItem="5Qz-i2-uIb" secondAttribute="bottom" id="PCQ-Ri-iT1"/>
                             <constraint firstItem="lcl-o7-jaZ" firstAttribute="leading" secondItem="m1k-ly-neV" secondAttribute="leading" id="gQU-Iv-tro"/>
                             <constraint firstItem="5Qz-i2-uIb" firstAttribute="leading" secondItem="m1k-ly-neV" secondAttribute="leading" id="ofG-sw-XOt"/>
-                            <constraint firstItem="ksK-rE-3vc" firstAttribute="top" secondItem="lcl-o7-jaZ" secondAttribute="bottom" constant="-20" id="wr1-F6-Wff"/>
-                            <constraint firstItem="lcl-o7-jaZ" firstAttribute="top" secondItem="m1k-ly-neV" secondAttribute="top" constant="20" id="yeY-QP-WRo"/>
+                            <constraint firstItem="ksK-rE-3vc" firstAttribute="top" secondItem="lcl-o7-jaZ" secondAttribute="bottom" id="wr1-F6-Wff"/>
+                            <constraint firstItem="lcl-o7-jaZ" firstAttribute="top" secondItem="m1k-ly-neV" secondAttribute="top" id="yeY-QP-WRo"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Password" id="DSk-Ul-7bE">
+                    <navigationItem key="navigationItem" title="Password Depot" id="DSk-Ul-7bE">
                         <barButtonItem key="leftBarButtonItem" title="Logout" id="hXR-mw-Ocd">
                             <connections>
                                 <action selector="onLogout:" destination="Qbn-3P-5M1" id="0AF-7d-dwT"/>
